add new model and slider

--- a/src/index.html
+++ b/src/index.html
@@ -6,64 +6,154 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
+    />
     <title>Model Public.</title>
   </head>
   <body>
-<header class="header">
-  <div class="container">
-    <nav class="nav">
-      <div class="nav__logo">
-        <a href="#"><img src="img/logo.svg" alt="logo"></a>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <div class="nav__logo">
+            <a href="#"><img src="img/logo.svg" alt="logo" /></a>
+          </div>
+          <div class="nav__lang">RU</div>
+          <div class="nav__menu">
+            <a href="#">Модели</a>
+            <a href="#">Стать моделью</a>
+            <a href="#">О нас</a>
+            <a href="#">Контакты</a>
+            <a href="#">FAQ</a>
+          </div>
+          <div class="nav__play">Fallen Greatness</div>
+        </nav>
+        <div class="header__wrapper">
+          <div class="header__title">
+            Model<br /><span>2011 — 22.</span> Public.
+          </div>
+          <button class="btn header__btn">Стать<br />моделью</button>
+        </div>
+        <div class="header__bot">
+          <div class="header__descr">Международное модельное агенство</div>
+          <div class="header__social">
+            <a href="#">Vkontakte</a>
+            <a href="#">Instagram</a>
+            <a href="#">Telegram</a>
+          </div>
+        </div>
       </div>
-      <div class="nav__lang">RU</div>
-      <div class="nav__menu">
-        <a href="#">Модели</a>
-        <a href="#">Стать моделью</a>
-        <a href="#">О нас</a>
-        <a href="#">Контакты</a>
-        <a href="#">FAQ</a>
+    </header>
+    <section class="news">
+      <div class="container">
+        <h2 class="title">Новости</h2>
+        <div class="down">
+          <div class="down__prew">
+            <svg
+              width="23"
+              height="23"
+              viewBox="0 0 23 23"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M15.344 18.6845L8.3405 11.4999L15.344 4.31526C15.4694 4.18689 15.5396 4.01457 15.5396 3.83513C15.5396 3.65569 15.4694 3.48337 15.344 3.35501C15.2831 3.29285 15.2104 3.24347 15.1302 3.20976C15.05 3.17605 14.9638 3.15869 14.8768 3.15869C14.7898 3.15869 14.7037 3.17605 14.6234 3.20976C14.5432 3.24347 14.4705 3.29285 14.4096 3.35501L6.95763 10.9982C6.8268 11.1324 6.75357 11.3124 6.75357 11.4999C6.75357 11.6873 6.8268 11.8673 6.95763 12.0016L14.4082 19.6448C14.4691 19.7074 14.542 19.7571 14.6225 19.7911C14.703 19.825 14.7895 19.8425 14.8768 19.8425C14.9642 19.8425 15.0507 19.825 15.1311 19.7911C15.2116 19.7571 15.2845 19.7074 15.3454 19.6448C15.4708 19.5164 15.541 19.3441 15.541 19.1646C15.541 18.9852 15.4708 18.8129 15.3454 18.6845L15.344 18.6845Z"
+                fill="#D1D1D1"
+              />
+            </svg>
+          </div>
+          <div class="down__next">
+            <svg
+              width="23"
+              height="23"
+              viewBox="0 0 23 23"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M7.656 4.31549L14.6595 11.5001L7.656 18.6847C7.53062 18.8131 7.46042 18.9854 7.46042 19.1649C7.46042 19.3443 7.53062 19.5166 7.656 19.645C7.7169 19.7071 7.78958 19.7565 7.86981 19.7902C7.95003 19.8239 8.03617 19.8413 8.12319 19.8413C8.2102 19.8413 8.29634 19.8239 8.37656 19.7902C8.45679 19.7565 8.52947 19.7071 8.59037 19.645L16.0424 12.0018C16.1732 11.8676 16.2464 11.6876 16.2464 11.5001C16.2464 11.3127 16.1732 11.1327 16.0424 10.9984L8.59181 3.35524C8.53087 3.29265 8.458 3.2429 8.37751 3.20893C8.29702 3.17496 8.21055 3.15746 8.12318 3.15746C8.03582 3.15746 7.94934 3.17496 7.86886 3.20893C7.78837 3.2429 7.7155 3.29265 7.65456 3.35524C7.52918 3.48361 7.45898 3.65593 7.45898 3.83537C7.45898 4.01481 7.52918 4.18713 7.65456 4.31549L7.656 4.31549Z"
+                fill="#D1D1D1"
+              />
+            </svg>
+          </div>
+        </div>
+        <hr />
+        <div class="news__items my-slider">
+          <div class="news__item">
+            <div class="news__time">Октябрь // 2022</div>
+            <img src="img/news1.jpg" alt="" class="news__img" />
+            <div class="news__title">Marianna Korzhimanova</div>
+            <div class="news__subtitle">Latest Magazine</div>
+          </div>
+          <div class="news__item">
+            <div class="news__time">Сентябрь // 2022</div>
+            <img src="img/news2.jpg" alt="" class="news__img" />
+            <div class="news__title">Nastya Koteneva</div>
+            <div class="news__subtitle">В тестовой съемке от Ольга Кулева</div>
+          </div>
+          <div class="news__item">
+            <div class="news__time">Август // 2022</div>
+            <img src="img/news3.jpg" alt="" class="news__img" />
+            <div class="news__title">Tanya Reutt</div>
+            <div class="news__subtitle">Danitlevi</div>
+          </div>
+          <div class="news__item">
+            <div class="news__time">Август // 2022</div>
+            <img src="img/news4.jpg" alt="" class="news__img" />
+            <div class="news__title">Nastya Koteneva</div>
+            <div class="news__subtitle">В тестовой съемке от Ольга Кулева</div>
+          </div>
+        </div>
       </div>
-      <div class="nav__play">Fallen Greatness</div>
-    </nav>
-    <div class="header__wrapper">
-      <div class="header__title">Model<br><span>2011 — 22.</span> Public.</div>
-      <button class="btn header__btn">Стать<br>моделью</button>
-    </div>
-    <div class="header__bot">
-      <div class="header__descr">Международное модельное агенство</div>
-      <div class="header__social">
-        <a href="#">Vkontakte</a>
-        <a href="#">Instagram</a>
-        <a href="#">Telegram</a>
+    </section>
+    <section class="new-people">
+      <div class="container">
+        <h2 class="title">Новые лица</h2>
+        <hr>
+        <div class="new-people__item">
+          <div class="new-people__photo">
+            <img src="img/new-peple.jpg" alt="" />
+          </div>
+          <div class="new-people__text">
+            <h3>Marianna Korzhimanova</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+            <a href="#"
+              ><svg
+                width="42"
+                height="42"
+                viewBox="0 0 42 42"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M20.9973 17.7985C19.2346 17.7985 17.796 19.2371 17.796 20.9999C17.796 22.7627 19.2346 24.2013 20.9973 24.2013C22.7601 24.2013 24.1986 22.7627 24.1986 20.9999C24.1986 19.2371 22.7601 17.7985 20.9973 17.7985ZM30.5988 20.9999C30.5988 19.6742 30.6108 18.3605 30.5364 17.0372C30.4619 15.5002 30.1113 14.1361 28.9874 13.0121C27.861 11.8857 26.4993 11.5375 24.9623 11.4631C23.6367 11.3886 22.323 11.4006 20.9997 11.4006C19.6741 11.4006 18.3604 11.3886 17.0371 11.4631C15.5001 11.5375 14.136 11.8881 13.0121 13.0121C11.8857 14.1385 11.5375 15.5002 11.4631 17.0372C11.3886 18.3629 11.4006 19.6766 11.4006 20.9999C11.4006 22.3232 11.3886 23.6393 11.4631 24.9626C11.5375 26.4996 11.8881 27.8637 13.0121 28.9877C14.1384 30.1141 15.5001 30.4623 17.0371 30.5367C18.3628 30.6112 19.6765 30.5992 20.9997 30.5992C22.3254 30.5992 23.6391 30.6112 24.9623 30.5367C26.4993 30.4623 27.8634 30.1117 28.9874 28.9877C30.1137 27.8613 30.4619 26.4996 30.5364 24.9626C30.6132 23.6393 30.5988 22.3256 30.5988 20.9999ZM20.9973 25.9256C18.2715 25.9256 16.0717 23.7257 16.0717 20.9999C16.0717 18.2741 18.2715 16.0742 20.9973 16.0742C23.7231 16.0742 25.923 18.2741 25.923 20.9999C25.923 23.7257 23.7231 25.9256 20.9973 25.9256ZM26.1247 17.0228C25.4883 17.0228 24.9743 16.5089 24.9743 15.8724C24.9743 15.236 25.4883 14.7221 26.1247 14.7221C26.7611 14.7221 27.275 15.236 27.275 15.8724C27.2752 16.0236 27.2456 16.1732 27.1879 16.3129C27.1301 16.4525 27.0454 16.5794 26.9385 16.6863C26.8317 16.7932 26.7048 16.8779 26.5651 16.9356C26.4255 16.9934 26.2758 17.023 26.1247 17.0228Z"
+                  fill="#141313"
+                />
+                <circle
+                  cx="21"
+                  cy="21"
+                  r="20.5"
+                  transform="rotate(90 21 21)"
+                  stroke="#D1D1D1"
+                /></svg
+            ></a>
+            <img src="img/new-peple2.jpg" alt="" />
+          </div>
+          <div class="new-people__img">
+            <img src="img/new-peple3.jpg" alt="" />
+            <div class="new-people__btn">
+              <a href="#"><div class="profil">Профиль модели</div></a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</header>
-<section class="news">
-  <div class="container">
-    <h2 class="title" >Новости</h2>
-    <hr>
-    <div class="news__items">
-      <div class="news__item">
-        <div class="news__time">Октябрь // 2022</div>
-        <img src="img/news1.jpg" alt="" class="news__img">
-        <div class="news__title">Marianna Korzhimanova </div>
-        <div class="news__subtitle">Latest Magazine</div>
-      </div>
-      <div class="news__item">
-        <div class="news__time">Октябрь // 2022</div>
-        <img src="img/news1.jpg" alt="" class="news__img">
-        <div class="news__title">Marianna Korzhimanova </div>
-        <div class="news__subtitle">Latest Magazine</div>
-      </div>
-      <div class="news__item">
-        <div class="news__time">Октябрь // 2022</div>
-        <img src="img/news1.jpg" alt="" class="news__img">
-        <div class="news__title">Marianna Korzhimanova </div>
-        <div class="news__subtitle">Latest Magazine</div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
