add section instagram

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
     <section class="new-people">
       <div class="container">
         <h2 class="title">Новые лица</h2>
-        <hr>
+        <hr />
         <div class="new-people__item">
           <div class="new-people__photo">
             <img src="img/new-peple.jpg" alt="" />
@@ -151,6 +151,167 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="textline">
+      <marquee scrollamount="12" class="textline__run">Сelebrity</marquee>
+      <div class="textline__text">SuperStars</div>
+    </section>
+    <section class="models">
+      <div class="container">
+        <hr />
+        <div class="models__items">
+          <div class="models__item">
+            <div class="models__text">
+              <h3>Tanya Reutt</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+              <a href="#"
+                ><svg
+                  width="42"
+                  height="42"
+                  viewBox="0 0 42 42"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20.9973 17.7985C19.2346 17.7985 17.796 19.2371 17.796 20.9999C17.796 22.7627 19.2346 24.2013 20.9973 24.2013C22.7601 24.2013 24.1986 22.7627 24.1986 20.9999C24.1986 19.2371 22.7601 17.7985 20.9973 17.7985ZM30.5988 20.9999C30.5988 19.6742 30.6108 18.3605 30.5364 17.0372C30.4619 15.5002 30.1113 14.1361 28.9874 13.0121C27.861 11.8857 26.4993 11.5375 24.9623 11.4631C23.6367 11.3886 22.323 11.4006 20.9997 11.4006C19.6741 11.4006 18.3604 11.3886 17.0371 11.4631C15.5001 11.5375 14.136 11.8881 13.0121 13.0121C11.8857 14.1385 11.5375 15.5002 11.4631 17.0372C11.3886 18.3629 11.4006 19.6766 11.4006 20.9999C11.4006 22.3232 11.3886 23.6393 11.4631 24.9626C11.5375 26.4996 11.8881 27.8637 13.0121 28.9877C14.1384 30.1141 15.5001 30.4623 17.0371 30.5367C18.3628 30.6112 19.6765 30.5992 20.9997 30.5992C22.3254 30.5992 23.6391 30.6112 24.9623 30.5367C26.4993 30.4623 27.8634 30.1117 28.9874 28.9877C30.1137 27.8613 30.4619 26.4996 30.5364 24.9626C30.6132 23.6393 30.5988 22.3256 30.5988 20.9999ZM20.9973 25.9256C18.2715 25.9256 16.0717 23.7257 16.0717 20.9999C16.0717 18.2741 18.2715 16.0742 20.9973 16.0742C23.7231 16.0742 25.923 18.2741 25.923 20.9999C25.923 23.7257 23.7231 25.9256 20.9973 25.9256ZM26.1247 17.0228C25.4883 17.0228 24.9743 16.5089 24.9743 15.8724C24.9743 15.236 25.4883 14.7221 26.1247 14.7221C26.7611 14.7221 27.275 15.236 27.275 15.8724C27.2752 16.0236 27.2456 16.1732 27.1879 16.3129C27.1301 16.4525 27.0454 16.5794 26.9385 16.6863C26.8317 16.7932 26.7048 16.8779 26.5651 16.9356C26.4255 16.9934 26.2758 17.023 26.1247 17.0228Z"
+                    fill="#141313"
+                  />
+                  <circle
+                    cx="21"
+                    cy="21"
+                    r="20.5"
+                    transform="rotate(90 21 21)"
+                    stroke="#D1D1D1"
+                  /></svg
+              ></a>
+              <div class="models__btn">
+                <a href="#"><div class="profil">Профиль модели</div></a>
+              </div>
+            </div>
+            <div class="models__photo">
+              <div class="model__img">
+                <img src="img/Tanya_Reutt.jpg" alt="Tanya_Reutt" />
+              </div>
+              <div class="model__img-mini">
+                <img src="img/Tanya Reutt2.jpg" alt="Tanya_Reutt" />
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="models__item">
+            <div class="models__photo">
+              <div class="model__img">
+                <img src="img/Marianna Korzhimanova.jpg" alt="Tanya_Reutt" />
+              </div>
+              <div class="model__img-mini">
+                <img src="img/Marianna Korzhimanova2.jpg" alt="Tanya_Reutt" />
+              </div>
+            </div>
+            <div class="models__text">
+              <h3>Nastya Koteneva</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+              <a href="#"
+                ><svg
+                  width="42"
+                  height="42"
+                  viewBox="0 0 42 42"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20.9973 17.7985C19.2346 17.7985 17.796 19.2371 17.796 20.9999C17.796 22.7627 19.2346 24.2013 20.9973 24.2013C22.7601 24.2013 24.1986 22.7627 24.1986 20.9999C24.1986 19.2371 22.7601 17.7985 20.9973 17.7985ZM30.5988 20.9999C30.5988 19.6742 30.6108 18.3605 30.5364 17.0372C30.4619 15.5002 30.1113 14.1361 28.9874 13.0121C27.861 11.8857 26.4993 11.5375 24.9623 11.4631C23.6367 11.3886 22.323 11.4006 20.9997 11.4006C19.6741 11.4006 18.3604 11.3886 17.0371 11.4631C15.5001 11.5375 14.136 11.8881 13.0121 13.0121C11.8857 14.1385 11.5375 15.5002 11.4631 17.0372C11.3886 18.3629 11.4006 19.6766 11.4006 20.9999C11.4006 22.3232 11.3886 23.6393 11.4631 24.9626C11.5375 26.4996 11.8881 27.8637 13.0121 28.9877C14.1384 30.1141 15.5001 30.4623 17.0371 30.5367C18.3628 30.6112 19.6765 30.5992 20.9997 30.5992C22.3254 30.5992 23.6391 30.6112 24.9623 30.5367C26.4993 30.4623 27.8634 30.1117 28.9874 28.9877C30.1137 27.8613 30.4619 26.4996 30.5364 24.9626C30.6132 23.6393 30.5988 22.3256 30.5988 20.9999ZM20.9973 25.9256C18.2715 25.9256 16.0717 23.7257 16.0717 20.9999C16.0717 18.2741 18.2715 16.0742 20.9973 16.0742C23.7231 16.0742 25.923 18.2741 25.923 20.9999C25.923 23.7257 23.7231 25.9256 20.9973 25.9256ZM26.1247 17.0228C25.4883 17.0228 24.9743 16.5089 24.9743 15.8724C24.9743 15.236 25.4883 14.7221 26.1247 14.7221C26.7611 14.7221 27.275 15.236 27.275 15.8724C27.2752 16.0236 27.2456 16.1732 27.1879 16.3129C27.1301 16.4525 27.0454 16.5794 26.9385 16.6863C26.8317 16.7932 26.7048 16.8779 26.5651 16.9356C26.4255 16.9934 26.2758 17.023 26.1247 17.0228Z"
+                    fill="#141313"
+                  />
+                  <circle
+                    cx="21"
+                    cy="21"
+                    r="20.5"
+                    transform="rotate(90 21 21)"
+                    stroke="#D1D1D1"
+                  /></svg
+              ></a>
+              <div class="models__btn models__btn-rinht">
+                <a href="#"><div class="profil">Профиль модели</div></a>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="models__item">
+            <div class="models__text">
+              <h3>Marianna Korzhimanova</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+              <a href="#"
+                ><svg
+                  width="42"
+                  height="42"
+                  viewBox="0 0 42 42"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20.9973 17.7985C19.2346 17.7985 17.796 19.2371 17.796 20.9999C17.796 22.7627 19.2346 24.2013 20.9973 24.2013C22.7601 24.2013 24.1986 22.7627 24.1986 20.9999C24.1986 19.2371 22.7601 17.7985 20.9973 17.7985ZM30.5988 20.9999C30.5988 19.6742 30.6108 18.3605 30.5364 17.0372C30.4619 15.5002 30.1113 14.1361 28.9874 13.0121C27.861 11.8857 26.4993 11.5375 24.9623 11.4631C23.6367 11.3886 22.323 11.4006 20.9997 11.4006C19.6741 11.4006 18.3604 11.3886 17.0371 11.4631C15.5001 11.5375 14.136 11.8881 13.0121 13.0121C11.8857 14.1385 11.5375 15.5002 11.4631 17.0372C11.3886 18.3629 11.4006 19.6766 11.4006 20.9999C11.4006 22.3232 11.3886 23.6393 11.4631 24.9626C11.5375 26.4996 11.8881 27.8637 13.0121 28.9877C14.1384 30.1141 15.5001 30.4623 17.0371 30.5367C18.3628 30.6112 19.6765 30.5992 20.9997 30.5992C22.3254 30.5992 23.6391 30.6112 24.9623 30.5367C26.4993 30.4623 27.8634 30.1117 28.9874 28.9877C30.1137 27.8613 30.4619 26.4996 30.5364 24.9626C30.6132 23.6393 30.5988 22.3256 30.5988 20.9999ZM20.9973 25.9256C18.2715 25.9256 16.0717 23.7257 16.0717 20.9999C16.0717 18.2741 18.2715 16.0742 20.9973 16.0742C23.7231 16.0742 25.923 18.2741 25.923 20.9999C25.923 23.7257 23.7231 25.9256 20.9973 25.9256ZM26.1247 17.0228C25.4883 17.0228 24.9743 16.5089 24.9743 15.8724C24.9743 15.236 25.4883 14.7221 26.1247 14.7221C26.7611 14.7221 27.275 15.236 27.275 15.8724C27.2752 16.0236 27.2456 16.1732 27.1879 16.3129C27.1301 16.4525 27.0454 16.5794 26.9385 16.6863C26.8317 16.7932 26.7048 16.8779 26.5651 16.9356C26.4255 16.9934 26.2758 17.023 26.1247 17.0228Z"
+                    fill="#141313"
+                  />
+                  <circle
+                    cx="21"
+                    cy="21"
+                    r="20.5"
+                    transform="rotate(90 21 21)"
+                    stroke="#D1D1D1"
+                  /></svg
+              ></a>
+              <div class="models__btn">
+                <a href="#"><div class="profil">Профиль модели</div></a>
+              </div>
+            </div>
+            <div class="models__photo">
+              <div class="model__img">
+                <img src="img/Nastya Koteneva.jpg" alt="Tanya_Reutt" />
+              </div>
+              <div class="model__img-mini">
+                <img src="img/Nastya Koteneva2.png" alt="Tanya_Reutt" />
+              </div>
+            </div>
+          </div>
+          <hr />
+          <button class="btn__next">
+            <svg
+              width="23"
+              height="23"
+              viewBox="0 0 23 23"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M18.6845 7.65612L11.4999 14.6596L4.31526 7.65612C4.18689 7.53074 4.01457 7.46054 3.83513 7.46054C3.65569 7.46054 3.48337 7.53074 3.35501 7.65612C3.29285 7.71702 3.24347 7.78971 3.20976 7.86993C3.17605 7.95015 3.15869 8.03629 3.15869 8.12331C3.15869 8.21032 3.17605 8.29646 3.20976 8.37669C3.24347 8.45691 3.29285 8.5296 3.35501 8.59049L10.9982 16.0425C11.1324 16.1733 11.3124 16.2466 11.4999 16.2466C11.6873 16.2466 11.8673 16.1733 12.0016 16.0425L19.6448 8.59193C19.7073 8.53099 19.7571 8.45812 19.7911 8.37763C19.825 8.29715 19.8425 8.21067 19.8425 8.12331C19.8425 8.03595 19.825 7.94947 19.7911 7.86898C19.7571 7.78849 19.7073 7.71563 19.6448 7.65468C19.5164 7.5293 19.3441 7.45911 19.1646 7.45911C18.9852 7.45911 18.8129 7.5293 18.6845 7.65468V7.65612Z"
+                fill="#141313"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="instagram">
+      <div class="container">
+        <div class="instagram__logo">
+          <img src="img/Instagram_logo.svg" alt="Instagram logo" />
+        </div>
+        <hr />
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-6c8ac317-c042-4509-81ba-146eb5f1760d"></div>
       </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
