--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,18 @@
       </div>
     </section>
     <section class="textline">
-      <marquee scrollamount="12" class="textline__run">Сelebrity</marquee>
+      <marquee scrollamount="12" class="textline__run"
+        >Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+        Сelebrity Сelebrity Сelebrity Сelebrity Сelebrity
+      </marquee>
       <div class="textline__text">SuperStars</div>
     </section>
     <section class="models">
@@ -311,7 +322,123 @@
         </div>
         <hr />
         <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-6c8ac317-c042-4509-81ba-146eb5f1760d"></div>
+        <div class="elfsight-app-6c8ac317-c042-4509-81ba-146eb5f1760d"></div>
+      </div>
+    </section>
+    <section class="blog">
+      <div class="container">
+        <h2 class="title">Блог</h2>
+        <hr />
+        <div class="blog__items">
+          <div class="blog__item">
+            <img src="img/blog1.jpg" alt="Бэкстейдж с показа" />
+            <h3>Бэкстэйдж с показа Yves Saint Laurent</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis ea iste doloremque non dolores magnam reiciendis
+              explicabo cum labore, nobis expedita atque harum id officiis
+              architecto voluptas quam sequi ad.
+            </p>
+          </div>
+          <div class="blog__item">
+            <video controls="controls">
+              <source src="img/video_blog.mp4" />
+            </video>
+            <h3>Бэкстэйдж с показа Yves Saint Laurent</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis ea iste doloremque non dolores magnam reiciendis
+              explicabo cum labore, nobis expedita atque harum id officiis
+              architecto voluptas quam sequi ad.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <hr />
+        <div class="footer__nav">
+          <div class="footer__menu">
+            <a href="#">Модели</a>
+            <a href="#">Стать моделью</a>
+            <a href="#">О нас</a>
+            <a href="#">Контакты</a>
+            <a href="#">FAQ</a>
+          </div>
+          <div class="footer__social">
+            <a href="#"
+              ><svg
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17.1111 3H3.88889C2.84568 3 2 3.89543 2 5V15C2 16.1046 2.84568 17 3.88889 17H17.1111C18.1543 17 19 16.1046 19 15V5C19 3.89543 18.1543 3 17.1111 3Z"
+                  fill="#141313"
+                />
+                <path d="M2 5L10.5 11L19 5" fill="#141313" />
+                <path
+                  d="M19 5C19 3.89543 18.1543 3 17.1111 3H3.88889C2.84568 3 2 3.89543 2 5M19 5V15C19 16.1046 18.1543 17 17.1111 17H3.88889C2.84568 17 2 16.1046 2 15V5M19 5L10.5 11L2 5"
+                  stroke="white"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                /></svg
+            ></a>
+            <a href="#"
+              ><svg
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_314_1175)">
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M19.5417 4.95669C19.68 4.50169 19.5417 4.16669 18.8792 4.16669H16.6917C16.135 4.16669 15.8783 4.45585 15.7392 4.77502C15.7392 4.77502 14.6267 7.43835 13.0508 9.16835C12.5408 9.67002 12.3092 9.82919 12.0308 9.82919C11.8917 9.82919 11.6825 9.67002 11.6825 9.21419V4.95669C11.6825 4.41002 11.5292 4.16669 11.0658 4.16669H7.62583C7.27833 4.16669 7.06917 4.42002 7.06917 4.66085C7.06917 5.17835 7.8575 5.29835 7.93833 6.75502V9.92002C7.93833 10.6142 7.81083 10.74 7.5325 10.74C6.79083 10.74 4.98667 8.06419 3.91583 5.00252C3.70833 4.40669 3.49833 4.16669 2.93917 4.16669H0.75C0.125 4.16669 0 4.45585 0 4.77502C0 5.34335 0.741667 8.16669 3.45417 11.9009C5.2625 14.4509 7.80833 15.8334 10.1275 15.8334C11.5183 15.8334 11.69 15.5267 11.69 14.9975V13.07C11.69 12.4559 11.8217 12.3334 12.2625 12.3334C12.5875 12.3334 13.1433 12.4934 14.4417 13.7225C15.925 15.18 16.1692 15.8334 17.0042 15.8334H19.1917C19.8167 15.8334 20.13 15.5267 19.95 14.92C19.7517 14.3167 19.0433 13.4409 18.1042 12.4017C17.5942 11.81 16.8292 11.1725 16.5967 10.8534C16.2725 10.4442 16.365 10.2617 16.5967 9.89752C16.5967 9.89752 19.2633 6.20919 19.5408 4.95669H19.5417Z"
+                    fill="#141313"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_314_1175">
+                    <rect width="20" height="20" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+            <a href="#"
+              ><svg
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M9.99785 7.3322C8.52888 7.3322 7.3301 8.53101 7.3301 10C7.3301 11.469 8.52888 12.6678 9.99785 12.6678C11.4668 12.6678 12.6656 11.469 12.6656 10C12.6656 8.53101 11.4668 7.3322 9.99785 7.3322ZM17.9991 10C17.9991 8.89525 18.0091 7.80051 17.9471 6.69777C17.885 5.4169 17.5928 4.28014 16.6562 3.3435C15.7176 2.40487 14.5829 2.11467 13.302 2.05263C12.1973 1.99059 11.1026 2.0006 9.99985 2.0006C8.89512 2.0006 7.80041 1.99059 6.69768 2.05263C5.41684 2.11467 4.28009 2.40687 3.34348 3.3435C2.40486 4.28214 2.11467 5.4169 2.05263 6.69777C1.99059 7.80252 2.0006 8.89725 2.0006 10C2.0006 11.1027 1.99059 12.1995 2.05263 13.3022C2.11467 14.5831 2.40686 15.7199 3.34348 16.6565C4.28209 17.5951 5.41684 17.8853 6.69768 17.9474C7.80241 18.0094 8.89713 17.9994 9.99985 17.9994C11.1046 17.9994 12.1993 18.0094 13.302 17.9474C14.5829 17.8853 15.7196 17.5931 16.6562 16.6565C17.5948 15.7179 17.885 14.5831 17.9471 13.3022C18.0111 12.1995 17.9991 11.1047 17.9991 10ZM9.99785 14.1048C7.72636 14.1048 5.89315 12.2715 5.89315 10C5.89315 7.72847 7.72636 5.89523 9.99785 5.89523C12.2693 5.89523 14.1025 7.72847 14.1025 10C14.1025 12.2715 12.2693 14.1048 9.99785 14.1048ZM14.2707 6.68576C13.7403 6.68576 13.312 6.25747 13.312 5.72711C13.312 5.19675 13.7403 4.76847 14.2707 4.76847C14.801 4.76847 15.2293 5.19675 15.2293 5.72711C15.2294 5.85305 15.2048 5.97778 15.1566 6.09416C15.1085 6.21054 15.0379 6.31628 14.9489 6.40533C14.8598 6.49438 14.7541 6.56499 14.6377 6.61311C14.5213 6.66123 14.3966 6.68592 14.2707 6.68576Z"
+                  fill="#141313"
+                /></svg
+            ></a>
+            <a href="#"
+              ><svg
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17.9516 4.27421L15.3861 16.1549C15.1924 16.9933 14.6878 17.202 13.9707 16.8072L10.0615 13.9785L8.17551 15.7602C7.96663 15.9653 7.79237 16.1364 7.38979 16.1364L7.67092 12.2273L14.9155 5.79888C15.2307 5.5234 14.8469 5.37016 14.4261 5.64623L5.4698 11.1844L1.61403 9.99902C0.775477 9.74202 0.760297 9.17557 1.78891 8.78024L16.8701 3.07451C17.5684 2.81752 18.1793 3.22716 17.9516 4.27481V4.27421Z"
+                  fill="#141313"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
